# swipe_modules

./: .readthedocs.yml  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
examples/: test_swipe_produce_maps.ipynb  test_swipe_produce_maps_imo.ipynb  test_swipe_scan.ipynb  test_swipe_scan_realistic.ipynb
swipe_modules/: __init__.py  common.py  raster_scanning_strategy.py  scanning_strategy.py  spin_scanning_strategy.py
swipe_modules/data/: forecast_launch_LYR_5_mb_2021122718.txt
